Exit application with event.
While this is done, I would really like to add an event loop to
these classes, I would like to do a few more tutorials before I
decide exactly how I'm going to do it.

--- a/ST/CMakeLists.txt
+++ b/ST/CMakeLists.txt
@@ -5,5 +5,5 @@ include_directories(${SDL_INCLUDE_DIRS})
 include_directories("${PROJECT_BINARY_DIR}")
 include_directories("${PROJECT_BINARY_DIR}/ST")
 
-add_library(ST app.cpp media.cpp _app/sdl.cpp _app/lesson2.cpp _app/lesson3.cpp)
+add_library(ST app.cpp media.cpp _app/sdl.cpp _app/lesson2.cpp _app/lesson3.cpp _app/lesson4.cpp)
 target_link_libraries(ST ${SDL_LIBRARIES} SDL_image)
