--- a/ST/CMakeLists.txt
+++ b/ST/CMakeLists.txt
@@ -13,6 +13,7 @@ add_library(ST
     _app/lesson4.cpp
     _app/lesson5.cpp
     _app/lesson6.cpp
+    _app/lesson7.cpp
     media.cpp)
 
 target_link_libraries(ST ${SDL_LIBRARIES} SDL_image)
