Lesson 8 start point
Moved interesting bits from lesson seven up a layer.

--- a/ST/CMakeLists.txt
+++ b/ST/CMakeLists.txt
@@ -14,6 +14,7 @@ add_library(ST
     _app/lesson5.cpp
     _app/lesson6.cpp
     _app/lesson7.cpp
+    _app/lesson8.cpp
     media.cpp)
 
 target_link_libraries(ST ${SDL_LIBRARIES} SDL_image SDL_ttf)
