Initialize functionality for lesson 8

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required (VERSION 2.6)
 project (secret-tribble)
 
+set(CMAKE_CXX_FLAGS "--std=c++11")
+
 add_subdirectory(ST)
 
 add_executable(secret-tribble secret-tribble.cpp)
