Lesson 9 class definitions and start

--- a/ST/CMakeLists.txt
+++ b/ST/CMakeLists.txt
@@ -15,6 +15,8 @@ add_library(ST
     _app/lesson6.cpp
     _app/lesson7.cpp
     _app/lesson8.cpp
+    _app/lesson9.cpp
+    _app/button.cpp
     _app/sdl_poll.cpp
     media.cpp)
 
