Lesson 10 starting point.

--- a/ST/CMakeLists.txt
+++ b/ST/CMakeLists.txt
@@ -16,6 +16,7 @@ add_library(ST
     _app/lesson7.cpp
     _app/lesson8.cpp
     _app/lesson9.cpp
+    _app/lesson10.cpp
     _app/button.cpp
     _app/sdl_poll.cpp
     media.cpp)
